# OS_Project

./: .gitignore  Block.cpp  Block.h  CMakeLists.txt  LICENSE  OS_Project.vcxproj  OS_Project.vcxproj.filters  OS_Project_test.vcxproj  OS_Project_test.vcxproj.filters  PartitionTable.h  README.md  main.cpp
Disk/: Block.cpp  Block.h  Definitionsh.h  File.h  IFileSystem.cpp  IFileSystem.h  OS_Project_test.sln  OS_Project_test.vcxproj  OS_Project_test.vcxproj.filters  Partition.cpp  Partition.h  PartitionTable.cpp  PartitionTable.h  main.cpp
UML/: UML DIAGRAM1.xmi
core/: FAT.cpp  FAT.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  api.cpp  api.h  block.cpp  block.h  compile.sh  core.vcxproj  core.vcxproj.filters  disk.cpp  disk.h  ifilesystem.cpp  ifilesystem.h  inode.cpp  inode.h  inodetable.cpp  inodetable.h  main.cpp  masterbootrecord.cpp  masterbootrecord.h  partition.cpp  partition.h  untitled1.pro
core/diskSimulation/: Block.cpp  Block.h  Disk.cpp  Disk.h  FormatType.h  MBR.cpp  MBR.h  Partition.cpp  Partition.h  PartitionTable.cpp  PartitionTable.h
core/fat/: FAT.cpp  FAT.h  FATFile.cpp  FATFile.h
core/include/: Block.h  Definitionsh.h  Disk.h  File.h  Filesystem.h  IFileSystem.h  INode.h  MBR.h  Partition.h  PartitionTable.h
core/src/: Block.cpp  Disk.cpp  File.cpp  IFileSystem.cpp  INode.cpp  MBR.cpp  Partition.cpp  PartitionTable.cpp  main.cpp
core_old/: compile.sh
core_old/include/: Definitionsh.h  Disk.h  File.h  IFileSystem.h  INode.h  INodeTable.h  Partition.h  PartitionTable.h
core_old/src/: File.cpp  IFileSystem.cpp  INodeTable.cpp  PartitionTable.cpp  main.cpp
ui/: disk.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  untitled2.pro
ui/core/: FAT.cpp  FAT.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  api.cpp  api.h  block.cpp  block.h  disk.cpp  disk.h  ifilesystem.cpp  (+5 more)
(+287 files in other folders)
